<resources>
    <string name="app_name">Book Companion</string>
    <string name="current_raedings_message">you are currently reading</string>
    <string name="add_new_book">Add a new Book</string>
    <string name="add_new_quote">Add a new Quote</string>
    <string name="add_new_track">Add a new Track</string>
    <string name="book_cover">Book Cover</string>

    <string name="add_book_activity_title">Add Book</string>
    <string name="book_location">Location</string>
    <string name="book_date">Date</string>
    <string name="book_pages">Pages</string>

    <string name="add_new_book_message">Search a book</string>
    <string name="search_book_hinte">Insert your book title</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="search_book">Search</string>
    <string name="warning_missing_title">Please insert a title</string>
    <string name="warning_title_notFound">Title not found, Try Again.</string>
    <string name="error_Retrofit">Error while calling the service</string>

    <string name="FETCHBOOKS">FETCHBOOKS</string>

    <string name="UNKNOWN">unknonw</string>
    <string name="Save_book">save in my library</string>
    <string name="my_library">My Library</string>
    <string name="book_saved">Book Saved</string>
    <string name="notUniqueBook">This book is already in your library</string>

    <string name="save_readingTrack">Save Reading Track </string>
    <string name="info_readingTrack">Insert Reading Track Info </string>
    <string name="title_readingTrack">Select Book </string>
    <string name="date_readingTrack">Select Date </string>
    <string name="location_readingTrack">Find Location </string>
    <string name="Page_readingTrack">Pages read: </string>
    <string name="Page_readingTrackhint">number of pages </string>
    <string name="add_readingTrack">Add Reading Track</string>
    <string name="reading_track_saved">Reading track Saved</string>
    <string name="edit">Edit</string>

    <string name="location_permission_notgranted">Location Permission Not Granted</string>
    <string name="PlacePickerButton">Select a place</string>
    <string name="no_location">No Location</string>

    <string name="warning_empty_title">Please select a book before saving</string>
    <string name="warning_empty_location">Please select a location before saving</string>
    <string name="Warning_empty_date">Please select a date before saving</string>
    <string name="warning_empty_pages">Please insert the page you have read before saving</string>
    <string name="selectTitle_Spinner">Select Book Title</string>
    <string name="emptyLibrary_Spinner">No book to select</string>

    <string name="my_library_details">My Library Details</string>
    <string name="my_reading_tracks">My Reading Tracks</string>
    <string name="detailsTitle">Book Title:</string>
    <string name="detailsLocation">Location: </string>
    <string name="detailsDate">Date: </string>
    <string name="detailsPages">Pages Read: </string>

    <string name="swipeAlert">Do you really want to delete this item? </string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>

    <string name="editReadingTrack">Edit Reading Track</string>
    <string name="updateReadingTrack">UPDATE</string>
    <string name="unsaved_changes">There are unsaved changes. Do you want to continue editing ?</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="itemUpdated">Reading Track Updated</string>

    <string name="selectBook">Select Book</string>
    <string name="insertQuote">Insert Quote</string>
    <string name="insertQuotehint">insert your quote here</string>
    <string name="saveQuote">Save Quote</string>
    <string name="updateQuote">Update Quote</string>
    <string name="Add_Quote">Add Quote</string>
    <string name="quoteBook">Book Title</string>
    <string name="quoteDescription">Quote Content</string>
    <string name="myQuotes">My Quotes</string>
    <string name="quoteSaved">Quote Saved</string>
    <string name="quoteContent_empty">Please insert a quote content</string>

    <string name="deleteButton">DELETE BOOK</string>
    <string name="warning_delete_book">Deleting this Book from your library will also delete its Reading Tracks
    and Quotes. Are you sure you want to Continue?</string>
    <string name="yesDelete">YES, DELETE IT</string>
    <string name="dontDelete">NO, KEEP IT</string>
    <string name="bookDeleted">Book Deleted</string>


    <string name="widget_title">Your last favourite Quote</string>
    <string name="noQuoteWidget">No quote to show</string>

    <string name="login">Login</string>
    <string name="signing_in">Signing In...</string>
    <string name="checking_state">Checking State...</string>

    <string name="emqpty_view">No item to show</string>
    <string name="warning_insert_a_book">You need to insert a book first</string>


</resources>
