<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/padding_large"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_readingTrack"
            android:textSize="@dimen/readin_track_info"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/bookTitle_spinner"
            android:focusedByDefault="true"
            android:nextFocusDown="@id/LocationReadingtrackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LocationReadingtrackButton"
                android:nextFocusDown="@id/LocationReadingtrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/location_readingTrack" />

            <EditText
            android:id="@+id/LocationReadingtrack"
                android:nextFocusDown="@id/DateReadingTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/no_location" />

        </LinearLayout>

        <EditText
            android:id="@+id/DateReadingTrack"
            android:nextFocusDown="@id/PagesReadingTrack"
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_readingTrack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Page_readingTrack"
            android:textSize="@dimen/read_pages"/>
        <EditText
            android:id="@+id/PagesReadingTrack"
            android:nextFocusDown="@id/saveReadingTrackButton"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/Page_readingTrackhint"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <Button
                android:id="@+id/saveReadingTrackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_readingTrack" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>