<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:paddingTop="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_book_message"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/bookTitleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/search_book_hinte"
            android:inputType="text" />

        <Button
            android:id="@+id/search_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_book"/>

        <FrameLayout
            android:id="@+id/book_results_fragment"
            android:paddingTop="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside" />
    </LinearLayout>
</ScrollView>