<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/padding_medium">

    <ImageView
        android:id="@+id/bookImageLibrary"
        android:layout_width="@dimen/bookImage"
        android:layout_height="@dimen/bookImage"
        android:contentDescription="bookCover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookTitleLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tools:text="Book Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookAuthorLibrary"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_pages"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookPagesLibrary"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium"
            android:textSize="@dimen/readin_track_info"
            android:text="@string/my_reading_tracks"
            android:paddingBottom="@dimen/padding_small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reading_track_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            tools:listitem="@layout/reading_track_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:textSize="@dimen/readin_track_info"
            android:text="@string/myQuotes"
            android:paddingBottom="@dimen/padding_small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/quotes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            tools:listitem="@layout/reading_track_item" />

        <LinearLayout
            android:padding="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/deleteBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_medium"
                android:background="@android:color/holo_red_light"
                android:text="@string/deleteButton"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>