<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectBook"
                android:textSize="@dimen/readin_track_info"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fixedTitleforUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/bookTitle_quotespinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:nextFocusDown="@id/quoteContent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/insertQuote"
                android:textSize="@dimen/readin_track_info"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quoteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_large"
                android:focusable="true"
                android:hint="@string/insertQuotehint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/padding_large">

            <Button
                android:id="@+id/saveQuotekButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/saveQuote"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>