<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_raedings_message"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/CurrentBookTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="BOOKTITLE"
                android:textSize="@dimen/current_book_title"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/AddNewBookFAV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_white"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true">
                </android.support.design.widget.FloatingActionButton>

                <TextView style="@style/mainOptionVoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_book"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/AddNewtrackkFAV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_white"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true">
                </android.support.design.widget.FloatingActionButton>

                <TextView style="@style/mainOptionVoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_track"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/AddNewQuoterFAV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_white"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true">
                </android.support.design.widget.FloatingActionButton>

                <TextView style="@style/mainOptionVoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_quote"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>